src/index.css
* {
  line-height: calc(1em + 0.5rem);
  font-family: "Montserrat", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
:root {
  background: linear-gradient(to left, #a6bad9, #b45266);
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.container {
  display: flex;
  flex-direction: column;
}

.container__page-contents {
  padding-block: 50px;
}

.header {
  background-color: rgb(255, 253, 253);
  height: 5em;
  padding: 0 1em;
  position: relative;
  z-index: 3;
}

.header__title h1 {
  background: linear-gradient(to left, #a6bad9, #e30909);
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  font-size: 3em;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  -webkit-text-stroke: 3px rgba(22, 23, 33, 0.233);
}

.navbar {
  width: 100%;
  height: 5em;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header__links {
  display: none;
  padding: 1em;
  text-align: right;
  font-size: 1em;
  list-style: none;
}

.header__navbar--link {
  padding: 0.5em;
}

.header__navbar--link a {
  text-decoration: none;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  color: rgb(0, 0, 0);
  font-weight: 600;
}

.header__navbar--button {
  color: rgb(0, 0, 0);
  background-color: transparent;
  border: transparent;
  cursor: pointer;
  display: block;
}

.dropdown_menu {
  display: block;
  position: absolute;
  right: 5%;
  height: 0;
  top: 4em;
  width: 90%;
  background-color: rgba(240, 248, 255, 0.325);
  backdrop-filter: blur(1em);
  border-radius: 1em;
  text-align: center;
  overflow: hidden;
  transition: height 0.1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.dropdown_menu li {
  padding: 0.7em;
}

.dropdown_menu.open {
  height: 12em;
  z-index: 3;
  border-top-right-radius: 0;
  border: 1px solid;
}

.dropdown_menu.open.sort {
  height: auto;
  width: 40%;
  right: 55%;
  top: 13em;
  padding: 2%;
  border-top-right-radius: 1em;
  border-top-left-radius: 0;
}

.side__bar {
  background-color: rgba(240, 248, 255, 0.838);
  display: block;
  width: 100%;
  position: absolute;
  text-align: center;
  top: 2.5em;
  z-index: 2;
  padding: 1% 0;
}

.side__bar.open {
  height: auto;
}

.sidebar__navbar {
  padding: 1em;
}

.sidebar__navbar h3 {
  font-size: 1.5em;
}

.sidebar__navbar a {
  color: aliceblue;
  font-size: 1em;
}

.btn {
  color: aliceblue;
  padding: 10px 50px;
  margin: 15px 0;
  border-radius: 20px;
  border: 1px transparent;
  font-weight: 600;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  cursor: pointer;
  transition: transform 0.2s color;
  background: linear-gradient(to right, #a6bad9, #e30909);
}

.btn:hover {
  transform: translateY(-3px);
  transition: all 0.4s ease-in-out;

  background: linear-gradient(to left, #a6bad9, #e30909);
}

.article__buttons {
  float: right;
  margin-top: -6%;
}

.comment {
  border: 1% dotted;
  background-color: rgba(235, 225, 225, 0.66);
  border-radius: 1em;
  border-top-left-radius: 0;
  margin: 5% auto;
  padding: 3%;
}

.comment__form textarea {
  width: 100%;
  height: 10em;
  background-color: rgb(235, 225, 225);
  border: none;
  margin: 10px 2px;
  border-radius: 5px;
  padding: 10px;
  outline-color: black;
}

.comment__form p {
  font-size: 0.9em;
  margin-top: 5%;
}

.comment__delete {
  float: right;
}

.articles__header--btn {
  float: left;
  border: 1px solid;
  border-radius: 0.2em;
  padding: 1%;
  background-color: rgba(255, 255, 255, 0.411);
  transition: all 0.2s ease-out;
  margin-top: 4%;
  margin-left: 5%;
  margin-right: 2%;
  width: auto;
}

.articles__header {
  margin: 5% auto;
  width: 100%;
  justify-content: center;
  max-width: 500px;
}

.articles__header--toggle {
  margin-top: 5%;
}

#sort_btns button {
  border: 1px transparent;
  border-radius: 1em;
  display: block;
  width: 100%;
}

#sort_btns button:hover {
  background-color: #b45266a7;
}

.error__status {
  text-align: center;
}
h1 {
  font-size: 2rem;
}
h2 {
  text-align: center;
  color: rgb(247, 247, 247);
  font-weight: 600;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  font-size: 2em;
}

h2::before {
  content: "";
  height: 3px;
  width: 90%;
  margin: 12% auto;
  max-width: 500px;
  position: absolute;
  right: 5%;
  background: linear-gradient(to right, #a6bad9, #e30909);
  border-radius: 2px;
}

html {
  scroll-behavior: smooth;
}

img {
  display: block;
  max-width: 100%;
  border-radius: 1em;
}

a {
  text-decoration: none;
  color: black;
  transition: transform 0.3s ease-in-out;
}

.header a:hover {
  color: #b45266;
  transform: translateY(-3px);
}

li {
  list-style: none;
}

/* xs screens */
@media (min-width: 320px) {
}

/* sm screens */
@media (min-width: 375px) {
  .dropdown_menu.open.sort {
    margin-top: 5%;
  }
}

/* mid screens */
@media (min-width: 425px) {
  h2::before {
    display: none;
  }
}

/* tablet */
@media (min-width: 768px) {
  .header__links {
    display: flex;
  }
  .header__navbar--link {
    display: inline-flex;
  }

  .header__navbar--button {
    display: none;
  }
  .dropdown_menu.header {
    display: none;
  }
  .dropdown_menu.open.sort {
    margin-top: 10%;
  }
}

/* laptop */
@media (min-width: 1024px) {
}

/* laptop L */
@media (min-width: 1440px) {
  .dropdown_menu.open.sort {
    margin-top: 15%;
    width: 20%;
  }
}

